# ClayDocs

./: .flake8  MANIFEST.in  Makefile  README.md  docs.py  package-lock.json  pyproject.toml  setup.cfg  tailwind.config.js  tox.ini
claydocs/: __init__.py  docs.py  docs_builder.py  docs_index.py  docs_render.py  docs_server.py  exceptions.py  ext_markdown_render.py  ext_markdown_wrapper.py  extra.py  highlight_extension.py  livereload.js  md_extension.py  nav.py  nav_tree.py  requirements.txt  server.py  stop_words.py  text_extractor.py  utils.py  wsgi.py
claydocs/indexer/: builder.py  indexer.py  text_extractor.py
claydocs/search/: __init__.py  builder.py  stop_words.py
claydocs/starter/: docs.py
claydocs/starter/components/: NavLinks.jinja
claydocs/starter/static/: _source.css  docs.css
claydocs/starter/theme/: Callout.jinja  Layout.jinja  Menu.jinja  NavBar.jinja  Page.jinja  PageHome.jinja  SearchDialog.jinja  SidebarGlobal.jinja  SidebarLocal.jinja  Tab.jinja  TabList.jinja  TabPanel.jinja  TextButton.jinja
claydocs/starter/theme/ui/: Tab.jinja  tab.js
components/: ArrowLeft.jinja  ArrowRight.jinja  Bullet.jinja  Code.jinja  Copyright.jinja  DarkSwitch.jinja  Footer.jinja  GitHub.jinja  Hamburger.jinja  Header.jinja  HomePage.jinja  Layout.jinja  Logo.jinja  Meh.jinja  Menu.jinja  Page.jinja  PageToc.jinja  PageTocItem.jinja  PageTocSubItem.jinja  PrevNext.jinja  Sidebar.jinja  SourceLink.jinja  ThemeSwitch.jinja  ThemeSwitch.js  Toc.jinja  toggle.js
content/: index.md  prueba.md
content/en/: index.md  search.md
content/en/guide/: arguments.md  css_and_js.md  index.md
content/es/: index.md  ole.md
content/guide/: arguments.md  extra.md  index.md
docs/: docs.py  package-lock.json  tailwind.config.js
docs/components/: Logo.jinja  NavLinks.jinja
docs/content/: index.md  internal.md
docs/static/: _source.css  docs.css  search-en.json
docs/theme/: Hamburger.jinja  Layout.jinja  Menu.jinja  NavBar.jinja  NavBarHome.jinja  SearchBar.jinja  SearchBtn.jinja  SearchDialog.jinja  SearchDialog.js  SidebarLocal.jinja  Tab.jinja  TabGroup.jinja  TabList.jinja  TabPanel.jinja  Toc.jinja  TocPage.jinja  toggle.js
docs/theme/ui/: Tab.jinja  TabPanel.jinja
src/claydocs/: __init__.py  autodoc.py  console.py  docs.py  docs_builder.py  docs_render.py  docs_server.py  exceptions.py  jinja_code.py  jinja_markdown.py  livereload.js  markdownify.py  nav.py  outliner.py  server.py  theme.py  utils.py
src/claydocs/indexer/: __init__.py  builder.py  indexer.py  lunr_es.py  stemmer.py  text_extractor.py
src/claydocs/starter/: docs.py
src/claydocs/starter/components/: Logo.jinja
src/claydocs/starter/static/: docs.css
src/claydocs/starter/theme/: Callout.jinja  CloseBtn.jinja  CodeTab.jinja  CodeTabs.jinja  Footer.jinja  LangSwitch.jinja  Layout.jinja  Menu.jinja  NavBar.jinja  Page.css  Page.jinja  SearchBtn.jinja  SearchDialog.jinja  SearchDialog.js  SidebarGlobal.jinja  SidebarLocal.jinja  Tab.jinja  TabList.jinja  TabPanel.jinja
src/components/: Callout.jinja  Key.jinja  Keys.jinja
src/starter/: docs.py  package.json  tailwind.config.js
src/starter/components/: Copyright.jinja  Logo.jinja  NavLinks.jinja
src/starter/static/: _prose.css  _source.css  _tailwind.css  docs.css  search-en.json
src/starter/theme/: Layout.jinja  Menu.jinja  NavBar.jinja  Page.css  Page.jinja  PrevNext.jinja  SidebarGlobal.jinja  ThemeSwitch.jinja
src/theme/: CloseBtn.jinja  Footer.jinja  Hamburger.jinja  LangSwitch.jinja  Layout.css  Layout.jinja  Menu.jinja  NavBar.jinja  Page.jinja  PageSingle.jinja  PrevNext.jinja  SearchBtn.jinja  SearchDialog.jinja  SidebarGlobal.jinja  SidebarLocal.jinja  TabGroup.jinja  TextButton.jinja  ThemeSwitch.jinja  Toc.jinja  _theme.css  package-lock.json  package.json  tailwind.config.js  theme.css
starter/: docs.py  package.json
starter/components/: SourceLink.jinja
starter/theme/: Keys.jinja  SidebarLocal.jinja  Tab.jinja  TabGroup.jinja  toggle.js
static/: _source.css  docs.css  docs.js  documents.json  search-en.json  search-es.json
tests/: test_nav.py  test_nav_tree.py
theme/: ArrowRight.jinja  CloseBtn.jinja  Code.css  Footer.jinja  GitHub.jinja  GlobalSidebar.jinja  Hamburger.jinja  Header.jinja  HeaderHome.jinja  HeaderMain.jinja  Icon.jinja  Image.jinja  Keys.jinja  LangSwitch.jinja  Layout.jinja  LocalSidebar.jinja  Menu.jinja  Note.jinja  Page.css  Page.jinja  PageHome.jinja  PageToc.jinja  PrevNext.jinja  SearchDialog.jinja  SearchDialog.js  SearchResult.jinja  SidebarGlobal.jinja  TextButton.jinja  ThemeSwitch.jinja  ThemeSwitch.js  Toc.jinja  TocPage.jinja  toggle.js
