[metadata]
name = claydocs
version= 0.1
url = https://github.com/jpsca/claydocs
project_urls =
    # Home Page = https://jpsca.github.io/claydocs/
    # Documentation = https://jpsca.github.io/claydocs/
    Issue Tracker = https://github.com/jpsca/claydocs/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Text Processing :: Markup :: HTML
license = MIT
license_files = MIT-LICENSE
description = Documentation for developers
long_description = file:README.md
long_description_content_type = text/markdown


[options]
packages = find:
include_package_data = true
python_requires = >=3.8,<4.0
install_requires =
    inflection>=0.5
    tcom>=0.15
    markdown>=3.2
    pygments>=2.6.1
    pymdown-extensions>=9.0
    pyyaml~=6.0
    watchdog>=2.0


[options.packages.find]
exclude =
    tests
    ui

[options.extras_require]
test =
    flake8
    flake8-bugbear
    flake8-quotes
    pytest
    pytest-cov

dev =
    black
    ipdb
    pyright


[flake8]
application-package-names = claydocs
application-import-names = claydocs
import-order-style = pycharm

select =
  B,  # bugbear
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    C901,  # x is too complex
    E203,  # whitespace before ':'
    E501,
    F405,  # x defined from star imports
    W503,  # line break before binary operator
    W605,

max-line-length = 92
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

exclude =
  .git,
  .venv
  __pycache__,
  conftest.py,
  docs,


[tool:pytest]
addopts = --doctest-modules
